Track 3 files into repository.
- modified package-lock.json
- modified package.json
- modified yarn.lock

Auto commit by GitBook Editor

--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "devDependencies": {
     "gitbook": "^3.2.3",
     "gitbook-cli": "^2.3.2",
-    "yarn": "^1.2.1"
+    "yarn": "^1.3.2"
   },
   "dependencies": {
-    "gitbook-plugin-mermaid": "0.0.9"
+    "gitbook-plugin-mermaid": "^0.0.9"
   }
 }
